# Signalfa

./: .gitignore  README.md  TODO.md  db.sqlite3  mypy.ini  pyproject.toml  requirements.txt
.tours/: a.tour
account/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_profile.py
account/templates/account/: edit_profile.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  profile.html  register.html
backend/: settings.py  urls.py
home/: admin.py  forms.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_post_bio_post_location_post_profileimg.py  0003_alter_post_profileimg.py  0004_alter_post_profileimg.py  0005_alter_post_profileimg.py  0006_alter_post_profileimg.py  0007_post_image.py  0008_alter_post_image.py  0009_alter_post_options_alter_post_body.py  0010_comment.py  0011_alter_comment_post_alter_comment_reply_and_more.py  0012_alter_comment_body_vote.py
home/templates/home/: create.html  detail.html  index.html  update.html  voice_recognition.html
templates/: base.html
templates/inc/: messages.html  navbar.html
