[tool.poetry]
name = "signalfa"
version = "0.1.0"
description = ""
authors = ["Foshati <amirrezafoshati@gmail.com>"]
license = "وmit"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
django = "^5.0.4"
pillow = "^10.3.0"
django-stubs = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
